[project]
name = "resemblyzer-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "fastapi[standard]>=0.135.1",
    "gunicorn>=25.1.0",
    "psycopg>=3.3.3",
    "resemblyzer>=0.1.4",
    "setuptools<81",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.41.0",
]
